added github auth to api
